# how-many-pools

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: cochran.py  densities.csv  district_areas_km2.csv  district_comparison.ipynb  download_satellite_images.py  get_region_samples.py  predict_pools.ipynb  sample_districts.ipynb  unified_points.csv  unified_points_with_detections.csv
data/samples/: AGUA RASA.geojson  ALTO DE PINHEIROS.geojson  ANHANGUERA.geojson  ARICANDUVA.geojson  ARTUR ALVIM.geojson  BARRA FUNDA.geojson  BELA VISTA.geojson  BELEM.geojson  BOM RETIRO.geojson  BRAS.geojson  BRASILANDIA.geojson  BUTANTA.geojson  CACHOEIRINHA.geojson  CAMBUCI.geojson  CAMPO BELO.geojson  CAMPO GRANDE.geojson  CAMPO LIMPO.geojson  CANGAIBA.geojson  CAPAO REDONDO.geojson  CARRAO.geojson  CASA VERDE.geojson  CIDADE ADEMAR.geojson  CIDADE DUTRA.geojson  CIDADE LIDER.geojson  CIDADE TIRADENTES.geojson  CONSOLACAO.geojson  CURSINO.geojson  ERMELINO MATARAZZO.geojson  FREGUESIA DO O.geojson  GRAJAU.geojson  GUAIANASES.geojson  IGUATEMI.geojson  IPIRANGA.geojson  ITAIM BIBI.geojson  ITAIM PAULISTA.geojson  ITAQUERA.geojson  JABAQUARA.geojson  JACANA.geojson  JAGUARA.geojson  JAGUARE.geojson  (+56 more)
models/: split_datasets.py  train.ipynb  voc_to_yolo.py
models/regressor/: best.pkl
models/vision/: args.yaml  datasetv3.yml  results.csv
