[project]
name = "nimbus3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "dotenv>=0.9.9",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=7.0.1",
    "labelme>=5.9.1",
    "labelme2yolo>=0.3.0",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "rapidfuzz>=3.14.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "supervision>=0.26.1",
    "ultralytics>=8.3.217",
    "unidecode>=1.4.0",
    "xgboost>=3.1.1",
]
